# dorie-wheel

./: .gitignore  CMakeLists.txt  README.md  dorie_version.cmake  pyproject.toml  setup.py
.github/workflows/: release.yml
patches/: disable-documentation.patch  randomfield-suggestion.patch  remove-tbb-call.patch
